solve paypal logo issue and emi alignment issue

--- a/src/cart/components/PayPalOptions.css
+++ b/src/cart/components/PayPalOptions.css
@@ -18,8 +18,7 @@
   height: 20px;
   position: absolute;
   left: 0;
-  top: 0;
-  bottom: 0;
+  top: 5px;
   margin: auto;
 }
 .paypalIcon {
